--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  cargo-deb-version: 3.2.0
+  cargo-deb-version: 3.4.1
 
 jobs:
   build:
@@ -53,7 +53,7 @@ jobs:
           key: ${{ runner.os }}-cargo-bin-${{ env.cargo-deb-version }}
 
       - name: Install cargo-deb
-        run: cargo install cargo-deb --version ${{ env.cargo-deb-version }}
+        run: cargo install cargo-deb --version ${{ env.cargo-deb-version }} --locked
 
       - name: Cross build
         uses: actions-rs/cargo@v1
